# amalia

./: .gitignore  README.md
amalia-chat/: README.md  pyproject.toml
amalia-chat/amalia_chat/: __main__.py
amalia-cli/: README.md  pyproject.toml
amalia-cli/amalia_cli/: __main__.py
amalia-sdk/: README.md  pyproject.toml
amalia-sdk/amalia_sdk/: __init__.py  client.py  config.py  errors.py
skills/amalia-pt-validate/: README.md  SKILL.md
skills/amalia-pt-validate/scripts/: ask_amalia.py
