[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amalia-chat"
version = "0.1.0"
description = "Interactive REPL chat client for Amália, the Portuguese LLM."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "amalia-sdk",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
]

[project.scripts]
amalia-chat = "amalia_chat.__main__:main"

[tool.setuptools.packages.find]
include = ["amalia_chat*"]

[tool.uv.sources]
amalia-sdk = { path = "../amalia-sdk", editable = true }
