[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "amalia-sdk"
version = "0.1.0"
description = "Python SDK for Amália, the Portuguese LLM (IAEdu API)."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "requests>=2.31",
]

[tool.setuptools.packages.find]
include = ["amalia_sdk*"]
